k8s/quiz-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-api
  namespace: quiz
spec:
  type: ClusterIP
  selector:
    app: quiz-api
  ports:
    - port: 4000
      targetPort: 4000
