k8s/quiz-scores-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-scores
  namespace: quiz
spec:
  type: ClusterIP
  selector:
    app: quiz-scores
  ports:
    - port: 8000
      targetPort: 8000
