k8s/quiz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
  namespace: quiz
spec:
  ingressClassName: traefik
  rules:
    - host: quiz.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-front
                port:
                  number: 3000
